--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="preload" href="SOdiaSansCondensed-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/fonts/SofiaSansCondensed-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/fonts/RobotoMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+
   <title>spencerchuong.dev</title>
   <meta property="og:description"
         content=" Hi, I'm Spencer Chuong. A growing programmer who’s learning more make impactful tools to solve problems. ">
@@ -40,6 +42,12 @@
         <div class="intro">
             <h2>A growing programmer who’s learning more make impactful tools to solve problems. </h2>
             <h3 class="scroll-invite">Want to see what I’ve worked on?<br><em>Look below⬇</em></h3>
+            
+        </div>
+    </div>
+    <div class="scroll">
+        <div>
+            <h3 id="projects-header">Recent repos:</h3>
         </div>
     </div>
     <div class="footer">
