color change, background graphic, img in circle

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
                 <a href="download/SpencerChuong_Resume.pdf" class="underlined">Resume</a>
             </div>
         </div>
+        <div class="circle-container">
+          <div class="picture">
+              <img src="picture/SpencerPhoto.jpg" alt="My profile picture">
+          </div>
+      </div>
         <div class="header">
             <div class="title">
-                <h1><span>Hi, I'm </span><span>Spencer Chuong.</span></h1>
+                <h1><span class="beginning">Hi, I'm </span><span class="end">Spencer Chuong.</span></h1>
             </div>
-        </div>
-        <div class="picture">
-            <img src="picture/SpencerPhoto.jpg" alt="My profile picture">
         </div>
         <div class="intro">
             <h2>A growing programmer who’s learning more make impactful tools to solve problems. </h2>
@@ -62,6 +64,9 @@
         <footer><a class="underlined" href="mailto:spencerchuong0@gmail.com">spencerchuong0@gmail.com</a>
             <br>Built from scratch using HTML, CSS, and JS 
         </footer>
+    </div>
+  <div class="canvas-container">
+      <canvas id="canvas"></canvas>
     </div>
   <script src="script.js"></script>
 </body>
