Changes to font, font color, added git repo fetch

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="preload" href="/fonts/SofiaSansCondensed-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="/fonts/RobotoMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/fonts/Outfit-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
 
   <title>spencerchuong.dev</title>
   <meta property="og:description"
@@ -38,7 +38,7 @@
       </div>
         <div class="header">
             <div class="title">
-                <h1><span class="beginning">Hi, I'm </span><span class="end">Spencer Chuong.</span></h1>
+                <h1><span>Hi, I'm </span><span>Spencer Chuong.</span></h1>
             </div>
         </div>
         <div class="intro">
@@ -49,7 +49,11 @@
     </div>
     <div class="scroll">
         <div>
-            <h3 id="projects-header">Recent repos:</h3>
+            
+            <div class= "repo"><h3 id="projects-header">Recent repos (by commit):</h3></div>
+            <ul id="projects-list">
+                <li id="projects-loading"></li>
+            </ul>
         </div>
     </div>
     <div class="footer">
@@ -68,6 +72,7 @@
   <div class="canvas-container">
       <canvas id="canvas"></canvas>
     </div>
+  <script src="getRepoCommits.js"></script>
   <script src="script.js"></script>
 </body>
 
