--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="preload" href="/fonts/RobotoMono-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="/fonts/Outfit-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
-
+  <script src="script.js"></script>
   <title>spencerchuong.dev</title>
   <meta property="og:description"
         content=" Hi, I'm Spencer Chuong. A growing programmer who’s learning more make impactful tools to solve problems. ">
@@ -15,7 +15,11 @@
     <meta property="og:url" content="http://spencerchuong.dev">
     <meta property="og:image" content="http://spencerchuong.dev/">
     <meta property="og:title" content="Spencer Chuong">
+    
+  
   <link href="style.css" rel="stylesheet" type="text/css" />
+  
+  
 </head>
 
 <body>
@@ -38,10 +42,11 @@
                 <h1><span>Hi, I'm </span><span>Spencer Chuong.</span></h1>
             </div>
             <div class="intro">
-                <h2>I am a <span id="cycle" data-delay="3500" data-states='[ 
+                <h2>An ambitious <span id="cycle" data-delay="3500" data-states='[ 
                     "computer science student",
-                    "low-level programmer"
-                    ]'>addition to your team</span>
+                    "low-level programmer", 
+                    "addition to the team"
+                    ]'></span>
 who's building impactful tools that benefits everyone by looking at a different angle.</h2>
                 <div class="nav-item">
                     <a href="download/SpencerChuong_Resume.pdf" class="underlined">Resume</a>
@@ -80,7 +85,7 @@ who's building impactful tools that benefits everyone by looking at a different 
       <canvas id="canvas"></canvas>
     </div>
   <script src="getRepoCommits.js"></script>
-  <script src="script.js"></script>
+  <script src="shapes.js"></script>
 </body>
 
 </html>
