Modified lines and border

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <img src="picture/SpencerPhoto.jpg" alt="My profile picture">
             </div>
             <div class="header">
+                <div class="vi"></div>
+
                 <div class="title">
                     <h1><span>Hi, I'm </span><span>Spencer Chuong.</span></h1>
                 </div>
