tweaks to borders

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="header">
                 <div class="vi"></div>
                 <div class="title">
-                    <h1><span>Hi, I'm </span><span>Spencer Chuong.</span></h1>
+                    <h1><span>Hello,</span> 
+                        <br> 
+                        <span>I'm Spencer Chuong.</span></h1>
                 </div>
                 <div class="intro">
                     <h2>An ambitious <span id="cycle" data-delay="3500" data-states='[ 
