--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="/fonts/Outfit-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="script.js"></script>
-  <title>spencerchuong.dev</title>
+  <title>spencerchuong.com</title>
   <meta property="og:description"
         content=" Hi, I'm Spencer Chuong. A growing programmer who’s learning more make impactful tools to solve problems. ">
     <meta property="og:type" content="website">
@@ -24,11 +24,6 @@
 </head>
 
 <body>
-    <!--
-    <h3 class="banner">For now, this site is a work in progress.
-        <em>However</em>, please don’t be hesitate to contact me.
-    </h3>
-    -->
     <div class="canvas-container">
         <canvas id="canvas"></canvas>
     </div>
